syntax = "proto3";

package v1.aspbv1;

import "v1/aspb/msg_anime_episode.proto";
import "v1/nfpb/msg_meta.proto";
import "v1/aspb/msg_server.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/aspb;aspbv1";

message GetFullAnimeEpisodeRequest {
  int64 episodeID  = 1;
  int32 languageID = 2;
}

message GetFullAnimeEpisodeResponse {
  AnimeEpisodeResponse        animeEpisode = 1;
  nfpbv1.AnimeMetaResponse    episodeMeta  = 2;
  int64                       serverID     = 3;
  AnimeEpisodeSubDataResponse sub          = 4;
  AnimeEpisodeDubDataResponse dub          = 5;
}